Improve fitness calculation
Co-authored-by: Jonas Pohl <git@jaypi4c.de>